--- a/guess.css
+++ b/guess.css
@@ -2,20 +2,29 @@
     padding: 0;
     margin: 0;
 }
-
+img.background {
+    position: absolute;
+    left: 0px;
+    top: 0px;
+    z-index: -1;
+    width: 100%;
+    height: 100%;
+    /* -webkit-filter: blur(1px);  */
+    /* filter: blur(1px); */
+    }
 .container {
-    background-image:url(WhatsApp\ Image\ 2023-02-23\ at\ 21.52.36.jpeg) ;
+    /* background-image:url(background-img.jpeg) ; */
     height: 100%;
     width: 100vw;
     z-index: -100;
 }
 
 .play-again {
-    padding: 0.5rem ;
+    /* padding: 0.5rem ; */
     background: #efefef;
     border: none;
-    border-radius: .5rem;
-    color: #444;
+    border-radius: 16px;
+    /* color: #444;
     font-size: 1rem;
     font-weight: 700;
     letter-spacing: .2rem;
@@ -27,7 +36,14 @@
     box-shadow: -2px -2px 6px rgba(255, 255, 255, .6),
     -2px -2px 4px rgba(255, 255, 255, .4),
     2px 2px 2px rgba(255, 255, 255, .05),
-    2px 2px 4px rgba(0, 0, 0, .1);
+    2px 2px 4px rgba(0, 0, 0, .1); */
+    background-color: #2153F3;
+    color: #2153F3;
+    background-color: #fff;
+    border: 1px solid #2153F3;
+    height: 44px;
+    cursor: pointer;
+    padding: 0.5rem 1rem;
 }
 
 button:hover {
@@ -37,12 +53,12 @@ button:hover {
         2px 2px 4px rgba(0, 0, 0, .1);
 }
 
-button:active {
+/* button:active {
     box-shadow: inset -2px -2px 6px rgba(255, 255, 255, .7),
         inset -2px -2px 4px rgba(255, 255, 255, .5),
         inset 2px 2px 2px rgba(255, 255, 255, .075),
         inset 2px 2px 4px rgba(0, 0, 0, .15);
-}
+} */
 
 .header {
     padding: 24px;
@@ -54,6 +70,7 @@ button:active {
 .first-row {
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
  h1 {
     
@@ -61,7 +78,8 @@ button:active {
 .second-row {
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: center;    
+    /* padding-top: 8rem; */
 }
 .third-row {
     display: flex;
@@ -88,33 +106,42 @@ button:active {
     width: 100%;
 }
 .between {
-    font-size: 24px;
+    font-size: 1rem;
     font-weight: 500;
-    color: #fff;
+    color:#2153F3 ;
+    background-color: lightcyan;
+    padding: .5rem;
+    border-radius: 4px;
 }
 .bottom-section {
     display: flex;
     justify-content: space-around;
     margin-top: 6rem;
+    flex-wrap: wrap;
 
 }
 .left-section {
     display: flex;
     flex-direction: column;
     gap: 16px;
+    justify-content: center;
+    align-items: center;
 }
 .input-num {
     padding: 20px;
     border:2px solid black;
     font-size: 19px;
 }
-button {
+.btn {
     background-color: rgba(144, 214, 255, 0.829);
     font-weight: 200;
     font-size: 20px;
     width:144px ;
-    height: 93px;
+    /* height: 93px; */
+    padding: .5rem;
     border-radius: 4px;
+    cursor: pointer;
+    margin-bottom: 4rem;
 }
 .guess-status {
     font-size: 27px;
@@ -125,11 +152,16 @@ button {
     gap: 12px;
     font-weight: 500;
     font-size: 25px;
+    justify-content: center;
+    align-items: center;
+    padding: .5rem;
 }
 .highscore-row {
     display: flex;
     font-size: 25px;
     font-weight: 500;
+    justify-content: center;
+    align-items: center;
 }
 .right-section {
     
